Added explanations and formatted some description

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PSN Code Test - Solution"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -12,8 +19,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Exploration"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +133,7 @@
        "[7219 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -166,14 +180,14 @@
     "Based on that information, we will do the following:\n",
     "1. Inspect the missing values in 'Value' column. Are there any other kind besides \"Null\" or \"NaN\"\n",
     "2. Convert 'Value' column to integer\n",
-    "3. Convert 'Epoch Time' column to datetime\n",
+    "3. Convert 'Epoch Time' column to datetime. Since Epoch time is Unix time in the number of seconds that have elapsed since the Unix epoch, 00:00:00 UTC on January 1, 1970 [source](https://note.nkmk.me/en/python-unix-time-datetime/).\n",
     "\n",
     "After that, we will begin counting the total downtime in the dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +196,7 @@
        "array(['1', '0', 'Null', nan], dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,12 +209,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that 'Value' column has 'Null' and nan values. We will inspect them further"
+    "We can see that the 'Value' column has 'Null' and nan values. We will inspect them further"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +227,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +317,7 @@
        "7216  1704128378000  Null"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +383,7 @@
        "32  1704042337000   NaN"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,22 +396,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we know that our data has 10 missing values in 'Value' column. We will fill this missing values with the last non-null value before itself. "
+    "Now we know that our data has 10 missing values in 'Value' column in the form of \"Null\" and `NaN`. We will fill this missing values with the last non-null value before itself. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[:, \"Value\"] = df.loc[:, \"Value\"].replace(\"Null\", np.nan)\n",
+    "df.loc[:, \"Value\"] = df.loc[:, \"Value\"].ffill()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.loc[:, \"Value\"] = df.Value.replace(\"Null\", np.nan)\n",
-    "df.loc[:, \"Value\"] = df.Value.ffill()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +423,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +462,7 @@
        "0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,12 +475,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we see that the total data points match with our first inspection. We will continue to convert 'Value' column to integer and 'Epoch Time' column to datetime"
+    "Now we see that the total data points match with our first inspection and our data now doesn't have any missing values. \n",
+    "\n",
+    "We will continue to convert 'Value' column to integer and 'Epoch Time' column to datetime."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -574,13 +590,17 @@
        "9  1704042098000      0 2024-01-01 00:01:38"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Convert the 'Value' column to integer\n",
     "df[\"Value\"] = df.Value.astype(int)\n",
+    "\n",
+    "# Convert the 'Epoch Time' column to datetime and store it in a new column 'date_time'\n",
+    "# We need to divide it by 1e3 to convert it to seconds\n",
     "df[\"date_time\"] = df.loc[:, \"Epoch Time\"].apply(lambda x: datetime.fromtimestamp(x / 1e3))\n",
     "\n",
     "df.head(10)"
@@ -588,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -613,8 +633,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data is now ready for the next step"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Counting Downtime\n",
+    "\n",
+    "We will count the total downtime in the dataset. Some information we are given in the [github repository](https://github.com/tripang1702/aiauto-psn-test-2024):\n",
+    "- Value = 1 means the system is down, and Value = 0 means the system is up\n",
+    "- We need to calculate how long the device was down (in seconds) of the data in `csv` file\n",
+    "- The expected output format is: `Total Downtime: 1234 seconds`\n",
+    "\n",
+    "We will begin solving the problem:\n",
+    "- We will create a function to calculate the total downtime in the dataset\n",
+    "- We will iterate through the dataset before the last one**:\n",
+    "    - If the current value is 1, we will calculate the difference between the current and next data point -> take only the seconds time and add it to the total downtime\n",
+    "    - return the total downtime after it finishes iterating through the dataset\n",
+    "    \n",
+    "** we only iterate before the last (`n-1`) because we need to compare the current value with the next value. If we iterate through the last data point, we will get an error because there is no next data point to compare with, we can handle this by using `try-except` though, but we will avoid it for simplicity."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +689,7 @@
     }
    ],
    "source": [
-    "# Check the function with the test data shown in github repo\n",
+    "# Check the function with the test data 1 shown in github repo\n",
     "data_test_1 = [\n",
     "    (1704042000000, 0),\n",
     "    (1704042026000, 1),\n",
@@ -660,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +719,7 @@
     }
    ],
    "source": [
-    "# Check the function with the test data shown in github repo\n",
+    "# Check the function with the test data 2 shown in github repo\n",
     "data_test_2 = [\n",
     "    (1704042000000, 1),\n",
     "    (1704042026000, 1),\n",
@@ -688,16 +735,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All clear and the results match with the expected output in the github repo.\n",
+    "\n",
+    "Now we will test our function with the original dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Downtime: 58310 seconds\n",
-      "or: 16 hour, 11 minutes, and 50 seconds\n"
+      "Total Downtime: 58310 seconds\n"
      ]
     }
    ],
@@ -706,7 +761,23 @@
     "\n",
     "# Count the downtime for the all of data\n",
     "downtime = count_downtime(df)\n",
-    "print(f'Total Downtime: {downtime} seconds')\n",
+    "print(f'Total Downtime: {downtime} seconds')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "or: 16 hour, 11 minutes, and 50 seconds\n"
+     ]
+    }
+   ],
+   "source": [
     "print(f'or: {strftime(\"%H hour, %M minutes, and %S seconds\", gmtime(downtime))}')"
    ]
   }
